# esp32-ble-update2

./: CMakeLists.txt
components/ble/: CMakeLists.txt  bleworker.c  bleworker.h  myble.c  myble.h
components/ota/: CMakeLists.txt  my_ota.c  my_ota.h
components/storage/: storage.c  storage.h
components/wifi/: wifi.c  wifi.h
main/: CMakeLists.txt  ble-update2.c
